osx config draft

--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -4,21 +4,22 @@
     <title>Phil Reinhold</title>
     <meta charset="utf-8">
     <link href="/css/main.css" rel="stylesheet" type="text/css"/>
-    <link href="/css/ir_black.css" rel="stylesheet" type="text/css"/>
+    <link href="/css/syntax.css" rel="stylesheet" type="text/css"/>
     <link href="http://fonts.googleapis.com/css?family=Oswald|Roboto:300|Inconsolata" rel="stylesheet" type="text/css"/>
-    <script src="/js/jquery-2.0.3.js"></script>
-    <script type="text/javascript">
-      var resize_bar = function() {
-        var height = $('#content').height();
-        if (height > $('#navbar').height()) {
-          $('#navbar').height(height);
-        }
-      }
-      $(document).ready(resize_bar);
-      $('#content').resize(resize_bar);
-    </script>
+    <!-- <script src="/js/jquery-2.0.3.js"></script> -->
+    <!-- <script type="text/javascript"> -->
+    <!--   var resize_bar = function() { -->
+    <!--     var height = $('#content').height(); -->
+    <!--     if (height > $('#navbar').height()) { -->
+    <!--       $('#navbar').height(height); -->
+    <!--     } -->
+    <!--   } -->
+    <!--   $(document).ready(resize_bar); -->
+    <!--   $('#content').resize(resize_bar); -->
+    <!-- </script> -->
   </head>
   <body>
+    <div id="cloud-container"></div>
     <div id="navbar">
       <h1>Phil Reinhold</h1>
       <div class="navitem"><a href="/#hi-im-phil">about</a></div>
